# midiboard

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: cli.md  config.md  events.md  readme.md
schema/: midiboard.json  midiboard.schema.json  midiboard.service
src/: config.rs  devices.rs  main.rs  run.rs  test.rs  tests.rs  types.rs  util.rs
