[package]
name = "midiboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
midir = "0.8.0"
clap = "3.1.18"
config = "0.13.1"
serde = "1.0.39"
home = "0.5.3"
colored = "2.0.0"
rust-embed = "6.4.0"
anyhow = "1.0.64"
